feat: Add documentation and update .gitignore for FAST Course Tracker
- Created README.md for project overview and documentation structure.
- Added DEPLOYMENT_GUIDE.md detailing GitHub and Vercel deployment workflow.
- Introduced ARCHITECTURE.md outlining technical architecture and component structure.
- Added PRODUCTION_READINESS_REPORT.md summarizing production readiness and critical fixes.
- Created REPOSITORY_RENAME_GUIDE.md for renaming repository and Vercel project.
- Updated .gitignore to include additional file types and directories for better management.

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,16 @@ MOBILE_REVIEW.md
 MOBILE_UX_RECOMMENDATIONS.md
 RECOMMENDATIONS.md
 nul
+*.bak
+*.backup
+*.tmp
+*.temp
+
+# Testing
+coverage/
+*.tsbuildinfo
+.nyc_output/
+
+# Environment
+.env.local
+.env.*.local
