--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.2.0",
     "react-simple-pull-to-refresh": "^1.3.3",
     "react-swipeable": "^7.0.2",
+    "react-window": "^2.2.3",
     "tailwindcss": "^4.1.17",
     "vite": "^7.2.2"
   },
