--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vitejs/plugin-react": "^5.1.1",
     "canvas-confetti": "^1.9.4",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.553.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
